--- a/style_industry.css
+++ b/style_industry.css
@@ -14,13 +14,6 @@ body {
   padding: 0 10px;
 }
 
-.header {
-  background-image: url("VEIDCO.jpg");
-  background-size: cover;
-  height: 600px;
-  text-align: center; 
-}
-
 .header .container {
   position: relative;
   top: 1000px;
@@ -35,9 +28,76 @@ body {
   text-transform: uppercase; 
 }
 
-@media (min-width:850px) {
+@media (min-width:991px) {
   .header h1 {
     font-size: 80px;
+  }
+
+  .header {
+    background-image: url("VEIDCO.jpg");
+    background-size: cover;
+    height: 800px;
+    text-align: center; 
+  }
+
+  .movil {
+    display: none;
+  }
+
+  .tablet {
+    display: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .header h1 {
+    font-size: 100px;
+  }
+
+  .header {
+    background-image: url("VEIDCO2.jpg");
+    background-size: cover;
+    height: 550px;
+    text-align: center; 
+  }
+
+  .tablet {
+    display: none;
+  }
+
+  .desktop {
+    display: none;
+  }
+
+  .movil {
+    width: 99%;
+    text-align: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 990px) {
+  .header h1 {
+    font-size: 100px;
+  }
+
+  .header {
+    background-image: url("VEIDCO.jpg");
+    background-size: cover;
+    height: 500px;
+    text-align: center; 
+  }
+
+  .movil {
+    display: none;
+  }
+
+  .desktop {
+    display: none;
+  }
+
+  .tablet {
+    width: 99%;
+    text-align: center;
   }
 }
 
