--- a/style5.css
+++ b/style5.css
@@ -35,12 +35,59 @@ body {
   text-transform: uppercase; 
 }
 
-@media (min-width:850px) {
+@media (min-width:991px) {
   .header h1 {
     font-size: 80px;
   }
+
+
+  .tablet {
+    display: none;
+  }
+
+  .movil {
+    display: none;
+  }
+
 }
 
+@media (min-width: 501px) and (max-width: 990px) {
+  .header h1 {
+    font-size: 80px;
+  }
+
+  .movil {
+    display: none;
+  }
+
+  .desktop {
+    display: none;
+  }
+
+  .tablet {
+    width: 99%;
+    text-align: center;
+  }
+}
+
+@media (max-width: 500px) {
+  .header h1 {
+    font-size: 80px;
+  }
+
+  .tablet {
+    display: none;
+  }
+
+  .desktop {
+    display: none;
+  }
+
+  .movil {
+    width: 99%;
+    text-align: center;
+  }
+}
 .header p {
   color: #f2f3ec;
   font-weight: 500;
